2004-05-05  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_ctl.erl: Added command for listing all registered
	users

	* src/ejabberd_ctl.erl: Bugfix, support for text-load and restore
	(thanks to Leif Johansson)

2004-05-04  Alexey Shchepin  <alexey@sevcom.net>

	* src/web/ejabberd_web_admin.erl: Updated

2004-05-01  Alexey Shchepin  <alexey@sevcom.net>

	* src/web/ejabberd_http.erl: 'Accept-Language' header support
	* src/web/ejabberd_web_admin.erl: Likewise
	* src/msgs/ru.msg: Updated

	* src/mod_muc/mod_muc_room.erl: Send status code "201" on room
	creation

2004-04-27  Alexey Shchepin  <alexey@sevcom.net>

	* src/translate.erl: Search translations directory in priv_dir
	instead of lib_dir (thanks to Sergei Golovan)

	* src/**/Makefile.in: Updated (thanks to Sergei Golovan)

	* src/win32/: Win32 installer stuff (thanks to Sergei Golovan)

	* src/**/Makefile.win32: Updated (thanks to Sergei Golovan)
	* src/configure.bat: Likewise
	* src/configure.erl: Likewise

	* doc/guide.tex: Updated (thanks to Sergei Golovan)

2004-04-26  Alexey Shchepin  <alexey@sevcom.net>

	* src/web/ejabberd_web_admin.erl: Better design for administration
	interface (not completed) (thanks to Andrey Zamaraev)
	* src/web/ejabberd_http.erl: Updated
	* src/web/ejabberd_web.erl: Likewise

2004-04-17  Alexey Shchepin  <alexey@sevcom.net>

	* src/web/ejabberd_http.erl: Increased receive buffer

	* src/mod_irc/mod_irc_connection.erl: Support for "/quote" command

2004-04-15  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd.erl: Added searching of files in code:priv_lib
	(thanks to Sergei Golovan)
	* src/translate.erl: Likewise

	* src/ejabberd_app.erl: Added "log_path" configuration parameter
	(thanks to Sergei Golovan)

	* src/**/Makefile.win32: Updated (thanks to Sergei Golovan)

	* src/**/*.c: Updated (thanks to Sergei Golovan)

	* src/configure.erl: Added writing of version to Makefile.inc
	(thanks to Sergei Golovan)
