@@ -1,3 +1,8 @@
+2004-05-07  Alexey Shchepin  <alexey@sevcom.net>
+
+	* src/web/ejabberd_web_admin.erl: Updated (thanks to Andrey
+	Zamaraev)
+
 2004-05-05  Alexey Shchepin  <alexey@sevcom.net>
 
 	* src/ejabberd_ctl.erl: Added command for listing all registered
